Change the interface, Change flexbox to grid because with flexbox the books, when in a certain number, begins to overflows the page and enter in the footer section, now with grid this is fixed

--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@
 body {
   margin: 0;
   border: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 3fr 1fr;
   height: 100vh;
+  gap: 20px;
 }
 
 * {
@@ -19,17 +19,18 @@ body {
 h1 {
   font-family: "Rubik Puddles";
   font-size: 3rem;
+  grid-area: 1 / 1 / 1 / 2;
+  justify-self: center;
 }
 
 .container {
   width: 100vw;
-  height: 300px;
-  display: flex;
-  flex-wrap: wrap;
+  height: auto;
+  display: grid;
   gap: 20px;
-  margin-top: 20px;
-  justify-content: center;
-  align-items: center;
+  place-items: center;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr)  ;
 }
 
 .card {
@@ -62,6 +63,8 @@ h1 {
   border-radius: 10px;
   cursor: pointer;
   box-shadow: 4px 4px black;
+  grid-area: 2 / 1 / 2 / 2;
+  justify-self: center;
 }
 
 .btn:hover {
@@ -128,4 +131,5 @@ dialog > * {
 
 footer {
     padding: 20px;
+    text-align: center;
 }
